Fri Feb 10 17:50:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kadmin_msnd.c: Remove needless #include of <krb5/asn.1/encode.h>

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * kadmin.c Removed krb5_keytype, changed krb5_enctype to
                krb5_enctype *, changed krb5_preauthtype to krb5_preauthtype *
                for krb5_get_in_tkt_with_password() rotuine.

Fri Feb  3 03:03:27 1995  John Gilmore  <gnu@cygnus.com>

	* kadmin.c (main):  Real live non-kludged argument parsing.
	Add -c option to specify ticket cache location (it really
	should just use a cache in memory in the process, but that
	isn't written yet).  Make some error messages more explicit!

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:12:43 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:39:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: relink executable if libraries change

Thu Sep 15 16:49:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kadm_add.c (kadm_add_user): Don't chop off last character of
		principal if it was supplied by the caller (instead of
		prompting the user to enter a principal).

Wed Sep 14 22:20:46 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kadmin_add.c (kadm_add_user): removed a duplicated
		free(inbuf.data) call.

Sat Jul 16 02:47:38 1994  Tom Yu  (tlyu at dragons-lair)

	* kadmin.c (get_first_ticket): change error code to match

Fri Jun 24 22:48:29 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* kadmin_done (kadm_done): fix memory allocation bugs

