@@ -1,3 +1,7 @@
+Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)
+
+        * kadmin.c Call krb5_sendauth() with new calling convention
+
 Fri Feb 10 17:50:39 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* kadmin_msnd.c: Remove needless #include of <krb5/asn.1/encode.h>
